Edited all pages + nav + cover photo and fixed join page alignment
Events page uses same flex layout as join listings page, removed unnecessary code and centered items for correct alignment, added cover photo on home page.

--- a/A2 - Website/css/main.css
+++ b/A2 - Website/css/main.css
@@ -14,6 +14,10 @@ body {
   padding: 1rem;
 }
 
+.center {
+  text-align: center;
+}
+
 .element {
   padding-bottom: 2rem;
   border-top-width: 0.15rem;
@@ -109,7 +113,6 @@ hr {
   background-color: #57C9FB;
 }
 
-
 #img-link {
   border-radius: 8px;
   width: 300px;
@@ -149,8 +152,18 @@ h3.img-text {
 /*
   TEXT ELEMENTS -------------------
 */
-#text h1 {
-  font-size: 4em;
+h1.text {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+#hero-h {
+  font-size: 2.5rem;
+  margin: 0.67em 0;
+}
+
+h1 {
+  font-size: 2rem;
   margin: 0.67em 0;
 }
 
@@ -277,10 +290,10 @@ h3.img-text {
 /*  Listing Page -------------------*/
 
 .details-container {
-  margin: 2% 10%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  margin: 4rem 0;
 }
 
 .details-content {
@@ -298,6 +311,10 @@ h3.img-text {
   -webkit-flex: 3 1 400px;
   -ms-flex: 3 1 400px;
   flex: 1 1 400px;
+}
+
+.details-image img {
+  width: 90%;
 }
 
 @media (max-width: 700px) {
@@ -354,7 +371,27 @@ h3.img-text {
 }
 
 
-/*Auto-Uppercase CSS: https://love2dev.com/blog/css-text-transform/*/
-/*Image Text-Overlay: https://www.tutorialrepublic.com/faq/how-to-position-text-over-an-image-using-css.php
-https://stackoverflow.com/questions/18322548/black-transparent-overlay-on-image-hover-with-only-css*/
-/*Input type attribute" https://www.w3schools.com/css/css_attribute_selectors.asp*/
+/*OTHER*/
+
+#cover { 
+/*https://stackoverflow.com/questions/6169666/how-to-resize-an-image-to-fit-in-the-browser-window*/
+  width: 100%;
+  max-height: 70vh;
+  margin: 0 0 1rem auto;
+  /*https://www.educative.io/edpresso/how-to-crop-an-image-in-css*/
+  object-fit: cover;
+}
+
+.img-text-cover {
+  position: absolute;
+  color: white;
+/*  background-color: rgba(0, 83, 158, 0.5);
+*/  margin: 0 auto;
+  padding: 30.5vh 0;
+  top: 9%;
+  text-align: center;
+  width: 100%;
+}
+
+
+
